# Inzynierka

./: .gitignore  README.md
Documentation/: .gitignore  bibliography.bib  main.tex  shorts.tex
Documentation/Chapters/: Abstract.tex  Building.tex  Controll.tex  Introduction.tex  Issue.tex  Map.tex  Schematic.tex  Summary.tex  Testing.tex
Documentation/Listing/: self_test.s
Documentation/Measure/: PID_speed_10.csv  angles.csv  distance_no_PID_speed_50.csv  speed.csv
Documentation/Schematic/: block.tex  idea.tex  motors.tex  room.tex  turning.tex  vectMapPathfinding.tex
Hardware/Communication/: data.csv  default.py  input_params.py  interpreter.py  log.py  main.py
Hardware/Comunication/: default.py  interpreter.py  log.py  main.py
Hardware/Measuremts/Compass/: compass_data_plot.py
Hardware/pico/: CMakeLists.txt  Datasheet  ReadAndSave.py  UDP_serial.py  main.c  my_gpio.h  speed.csv  utilites.c  utilites.h
Hardware/pico/FreeRTOS/: CMakeLists.txt
Hardware/pico/I2C/: i2c.c  i2c.h
Hardware/pico/Lib/24C04/: 24c04.c  24c04.h
Hardware/pico/Lib/Compass/: compass.c  compass.h  compass_regMap.h
Hardware/pico/Lib/Counter/: counter.c  counter.h
Hardware/pico/Lib/Eeprom/: eeprom.c
Hardware/pico/Lib/FreeRTOS/: FreeRTOSConfig.h
Hardware/pico/Lib/I2C/: i2c.c  i2c.h
Hardware/pico/Lib/IR/: ir.c  ir.h
Hardware/pico/Lib/MPU6050/: mpu6050.c  mpu6050.h  mpu6050_regMap.h
Hardware/pico/Lib/Motor/: motor.c  motor.h
Hardware/pico/Lib/PID/: pid.c  pid.h
Hardware/pico/Lib/SPIFlash/: flash.c  flash.h  mem_map.h
Hardware/pico/Lib/Servo/: servo.c  servo.h
Hardware/pico/Lib/StepperMotor/: counter.pio  steppermotor.c  steppermotor.h
Hardware/pico/Lib/ToF/: tof.c  tof.h
Hardware/pico/Lib/UDP/: udp.c  udp.h  udp_test.py
Hardware/pico/Lib/VL53L0X/Api/core/src/: vl53l0x_api.c
Hardware/pico/Lib/VL53L0X/Api/platform/src/: vl53l0x_rp2040.c
Hardware/pico/MPU6050/: mpu6050.c  mpu6050.h  mpu6065_regMap.h
Hardware/pico/Servo/: servo.c  servo.h  servo.pio
Hardware/pico/Test/: CompasTest.c  CompassTest.c  MeasureSpeedTest.c  ReadAndSave.py  if_statment_test.s  motion_test.s  self_test.s  speed_test.s  test.h  test.s
Hardware/pico/ToF/: tof.c  tof.h
Hardware/pico/VL53L0X/Api/platform/src/: vl53l0x_rp2040.c
Modele/: CalibrationHolder_MPU6050.FCStd  CalibrationHolder_MPU6050_longLeg.FCStd  FrontWheelHolder.FCStd  Podstawka_do_kalibraci_MPU6050.FCStd  ServoHolder.FCStd  ToF_holder.FCStd
PathFinding_sim/: CMakeLists.txt  README.md  UDP_serial.sh  main.c  makefile  printf_color.h  utility.c  utility.h
PathFinding_sim/Car/: car.c  car.h
PathFinding_sim/GUI/: GUI.c  GUI.h  message.c  slider_panel.c
PathFinding_sim/Geometry/: geometry.h
PathFinding_sim/Map/: map.c  map.h
PathFinding_sim/Map/test/: MAP_test  cell_types.h  makefile  test.c  test_map.c  test_map.h  unittest_map.c  unittest_map.h
PathFinding_sim/Pathfinding/: geometry.c  pathfinding.c  pathfinding.h  point.h
PathFinding_sim/Pathfinding/List/: list.c  list.h
PathFinding_sim/Queue/: queue.c  queue.h
PathFinding_sim/Test/: bisector.c
PathFinding_sim/UDP/: udp.c  udp.h
Src/: main.py
